--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,3 +1,6 @@
+@-ms-viewport {
+    width: device-width;
+}
 .title {
   font-family: 'Quicksand', 'Source Sans Pro', -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
